# claude-usage-tracker

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  start.sh
src/: api.rs  app.rs  config.rs  format.rs  install.rs  keychain.rs  logging.rs  main.rs  notify.rs  poller.rs  types.rs
