[package]
name = "claude-usage"
version = "0.1.0"
edition = "2024"
description = "macOS menubar app that tracks Claude Code session and weekly usage"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
muda = "0.17.2"
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = "0.35.0"
toml = "1.1.2"
tray-icon = "0.22.0"
ureq = { version = "3.3.0", features = ["json"] }
