[project]
name = "claude-usage"
version = "0.1.0"
description = "macOS menubar app that tracks Claude Code session and weekly usage via Anthropic's OAuth API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1",
    "rumps>=0.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
